--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -1138,7 +1138,7 @@
                                                 <tr>
                                                     <td><strong>EJECUTIVO ACTUAL A CARGO DE CUENTA</strong></td>
                                                     <td colspan="3"><span
-                                                                v-html="aplicativo_diners_tarjeta_diners.ejecutivo_actual_cuenta"></span>
+                                                                v-html="aplicativo_diners_tarjeta_diners.ejecutivo"></span>
                                                     </td>
                                                 </tr>
                                                 <tr>
@@ -1699,7 +1699,7 @@
                                                 <tr>
                                                     <td><strong>EJECUTIVO ACTUAL A CARGO DE CUENTA</strong></td>
                                                     <td colspan="3"><span
-                                                                v-html="aplicativo_diners_tarjeta_interdin.ejecutivo_actual_cuenta"></span>
+                                                                v-html="aplicativo_diners_tarjeta_interdin.ejecutivo"></span>
                                                     </td>
                                                 </tr>
                                                 <tr>
@@ -2251,7 +2251,7 @@
                                                 <tr>
                                                     <td><strong>EJECUTIVO ACTUAL A CARGO DE CUENTA</strong></td>
                                                     <td colspan="3"><span
-                                                                v-html="aplicativo_diners_tarjeta_discover.ejecutivo_actual_cuenta"></span>
+                                                                v-html="aplicativo_diners_tarjeta_discover.ejecutivo"></span>
                                                     </td>
                                                 </tr>
                                                 <tr>
@@ -2803,7 +2803,7 @@
                                                 <tr>
                                                     <td><strong>EJECUTIVO ACTUAL A CARGO DE CUENTA</strong></td>
                                                     <td colspan="3"><span
-                                                                v-html="aplicativo_diners_tarjeta_mastercard.ejecutivo_actual_cuenta"></span>
+                                                                v-html="aplicativo_diners_tarjeta_mastercard.ejecutivo"></span>
                                                     </td>
                                                 </tr>
                                                 <tr>
