--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -40,7 +40,7 @@
                     <div class=" row mb-4">
                         <label for="inputName" class="col-md-2 form-label">Productos</label>
                         <div class="col-md-10">
-                            <table class="table border table-striped table-bordered table-sm mb-0" style="font-size: 12px;">
+                            <!--<table class="table border table-striped table-bordered table-sm mb-0" style="font-size: 12px;">
                                 <thead>
                                 <tr>
                                     <th style="font-size: 12px;">MARCA</th>
@@ -80,7 +80,7 @@
                                         <span style="text-transform: uppercase;" class="form-control-plaintext" v-html="a.aplicativo.saldo_actual_facturado"></span>
                                     </td>
                                 </tr>
-                            </table>
+                            </table>-->
                         </div>
                     </div>
 
