--- a/views/admin/usuarios/index.twig
+++ b/views/admin/usuarios/index.twig
@@ -55,6 +55,7 @@
 								<option value="TELEFONIA">TELEFONIA</option>
 								<option value="AUXILIAR TELEFONIA">AUXILIAR TELEFONIA</option>
 								<option value="OPERATIVO">OPERATIVO</option>
+								<option value="FALLIDAS">FALLIDAS</option>
 							</select>
 						</div>
 
