--- a/views/reportes/baseGeneral.twig
+++ b/views/reportes/baseGeneral.twig
@@ -120,6 +120,7 @@
 
                             <th>TIPO GESTIÓN</th>
                             <th>ORIGEN GESTIÓN</th>
+                            <th>PESO PALETA</th>
 						</tr>
 						</thead>
 						<tbody>
@@ -174,7 +175,7 @@
 
                             <td v-html='d.identificador'></td>
                             <td v-html='d.origen'></td>
-
+                            <td v-html='d.peso_paleta'></td>
 						</tr>
 						</tbody>
                         <tfoot>
