bloquear fin de semana del calendario

--- a/views/producto/editarDiners.twig
+++ b/views/producto/editarDiners.twig
@@ -4144,6 +4144,7 @@
                         minDate: 0, // 0 days offset = today
                         maxDate: '+1m',
                         numberOfMonths: 1,
+                        beforeShowDay: $.datepicker.noWeekends,
                     });
                     $('#fecha_compromiso_pago_diners').datepicker({
                         dateFormat: 'yy-mm-dd',
@@ -4151,6 +4152,7 @@
                         minDate: 0, // 0 days offset = today
                         maxDate: '{{ fecha_maxima_compromiso_diners }}',
                         numberOfMonths: 1,
+                        beforeShowDay: $.datepicker.noWeekends,
                     });
                     $('#fecha_compromiso_pago_interdin').datepicker({
                         dateFormat: 'yy-mm-dd',
@@ -4158,6 +4160,7 @@
                         minDate: 0, // 0 days offset = today
                         maxDate: '{{ fecha_maxima_compromiso_interdin }}',
                         numberOfMonths: 1,
+                        beforeShowDay: $.datepicker.noWeekends,
                     });
                     $('#fecha_compromiso_pago_discover').datepicker({
                         dateFormat: 'yy-mm-dd',
@@ -4165,6 +4168,7 @@
                         minDate: 0, // 0 days offset = today
                         maxDate: '{{ fecha_maxima_compromiso_discover }}',
                         numberOfMonths: 1,
+                        beforeShowDay: $.datepicker.noWeekends,
                     });
                     $('#fecha_compromiso_pago_mastercard').datepicker({
                         dateFormat: 'yy-mm-dd',
@@ -4172,6 +4176,7 @@
                         minDate: 0, // 0 days offset = today
                         maxDate: '{{ fecha_maxima_compromiso_mastercard }}',
                         numberOfMonths: 1,
+                        beforeShowDay: $.datepicker.noWeekends,
                     });
 
                 });
